--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,23 +44,26 @@ services:
   
   db:
     image: postgres:13
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=outagealert
       - POSTGRES_HOST_AUTH_METHOD=trust
+      - PGUSER=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata
+    expose:
+      - 5432
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
       # - ./init-database.sql:/docker-entrypoint-initdb.d/init-database.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d outagealert"]
-      interval: 3s
+      test: ["CMD-SHELL", "pg_isready -d outagealert -U postgres"]
+      interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 60s
     networks:
       - outagenet
 
