chore: update postgres to latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - outagenet
   
   db:
-    image: postgres:13
+    image: postgres
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
