--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - outagenet
   
   db:
-    image: postgres
+    image: postgres:16
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -57,7 +57,7 @@ services:
     expose:
       - 5432
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
       # - ./init-database.sql:/docker-entrypoint-initdb.d/init-database.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d outagealert -U postgres"]
