--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "SHA256:p80NnA+2opfRQizliUKYSCPmfpLhX4OPAOQ1lDjkIPk"
+            - "SHA256:xTtWuDQe9R7qyOwRPzMEQ7YkZmeTGgeom7uzPDkeBkw"
+
+
       - checkout
       - setup_remote_docker:
           version: default
