update app service ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     command: >
       sh -c "doppler run -- ./outagealert"
     tty: true
-    ports:
-      - "1323-1324:1323"
+    expose:
+      - "1323"
     depends_on:
       - db
     networks:
