--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,16 @@ upstream backend {
 
 server {
 		listen 80;
+		location /sitemap.xml {
+				try_files $uri /root/dev/sitemap.xml =404;
+		}
+
+		location /robots.txt {
+				try_files $uri /root/dev/robots.txt =404;
+		}
+
 		location / {
 				proxy_pass http://backend;
 		}
+
 }
