--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,16 @@ upstream backend {
 
 server {
 		listen 80;
+		server_name outagealert.dev;
+		add_header Access-Control-Allow-Origin *;
+		root /var/www;
+
 		location /sitemap.xml {
-				try_files $uri /root/dev/sitemap.xml =404;
+				try_files $uri $uri/ /sitemap.xml =404;
 		}
 
 		location /robots.txt {
-				try_files $uri /root/dev/robots.txt =404;
+				try_files $uri $uri/ /robots.txt =404;
 		}
 
 		location / {
