fix: remove 404 nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,11 @@ server {
 		root /var/www;
 
 		location /sitemap.xml {
-				try_files $uri $uri/ /sitemap.xml =404;
+				try_files $uri $uri/ /sitemap.xml;
 		}
 
 		location /robots.txt {
-				try_files $uri $uri/ /robots.txt =404;
+				try_files $uri $uri/ /robots.txt;
 		}
 
 		location / {
