fix: nginx paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,12 @@ server {
 		add_header Access-Control-Allow-Origin *;
 		root /var/www;
 
-		location /sitemap.xml {
-				try_files $uri $uri/ /sitemap.xml;
+		location = /sitemap.xml {
+				alias /var/www/sitemap.xml;
 		}
 
-		location /robots.txt {
-				try_files $uri $uri/ /robots.txt;
+		location = /robots.txt {
+				alias /var/www/robots.txt;
 		}
 
 		location / {
