fix: copy files to nginx container for static serving

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,14 +6,14 @@ server {
 		listen 80;
 		server_name outagealert.dev;
 		add_header Access-Control-Allow-Origin *;
-		root /var/www;
+		root /var/;
 
 		location = /sitemap.xml {
-				alias /var/www/sitemap.xml;
+				alias /var/sitemap.xml;
 		}
 
 		location = /robots.txt {
-				alias /var/www/robots.txt;
+				alias /var/robots.txt;
 		}
 
 		location / {
