--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
         condition: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./robots.txt:/var/robots.txt
+      - ./sitemap.xml:/var/sitemap.xml
     depends_on:
       - app
     networks:
