--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,29 @@
-upstream backend {
-		server app:1323;
+error_log  /var/error.log;
+http {
+		upstream backend {
+				server localhost:1323;
+		}
+		server {
+
+				listen 1440;
+				server_name outagealert.dev;
+				add_header Access-Control-Allow-Origin *;
+				root /var;
+
+
+				location = /sitemap.xml {
+						try_files $uri $uri/ /sitemap.xml =404;
+				}
+
+				location = /robots.txt {
+						try_files $uri $uri/ /robots.txt =404;
+				}
+
+				location / {
+						proxy_pass http://backend;
+				}
+
+		}
 }
 
-server {
-		listen 80;
-		server_name outagealert.dev;
-		add_header Access-Control-Allow-Origin *;
-		root /var/;
-
-		location = /sitemap.xml {
-				alias /var/sitemap.xml;
-		}
-
-		location = /robots.txt {
-				alias /var/robots.txt;
-		}
-
-		location / {
-				proxy_pass http://backend;
-		}
-
-}
+events {}
