--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,11 @@ server {
 		root /var/;
 
 		location = /sitemap.xml {
-				alias /var/sitemap.xml;
+				try_files $uri $uri/ /sitemap.xml =404;
 		}
 
 		location = /robots.txt {
-				alias /var/robots.txt;
+				try_files $uri $uri/ /robots.txt =404;
 		}
 
 		location / {
