--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
         condition: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./robots.txt:/etc/robots.txt
-      - ./sitemap.xml:/etc/sitemap.xml
+      - ./robots.txt:/usr/share/nginx/html/robots.txt
+      - ./sitemap.xml:/usr/share/nginx/html/sitemap.xml
     depends_on:
       - app
     networks:
