--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 		listen 80;
 		server_name outagealert.dev;
 		add_header Access-Control-Allow-Origin *;
-		root /etc;
+		root /usr/share/nginx/html;
 
 		location = /sitemap.xml {
 				try_files $uri $uri/ /sitemap.xml =404;
