--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,7 @@ services:
         condition: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./robots.txt:/usr/share/nginx/html/robots.txt
-      - ./sitemap.xml:/usr/share/nginx/html/sitemap.xml
+      - ./domain_config:/usr/share/nginx/html/domain_config
     depends_on:
       - app
     networks:
