--- a/nginx.conf
+++ b/nginx.conf
@@ -6,15 +6,14 @@ server {
 		listen 80;
 		server_name outagealert.dev;
 		add_header Access-Control-Allow-Origin *;
-		root /usr/share/nginx/html/domain_config;
 
-		location = /sitemap.xml {
-				try_files $uri $uri/ /sitemap.xml =404;
+		location /robots.txt {
+				alias /usr/share/nginx/html/domain_config/robots.txt/;
 		}
 
-		location = /robots.txt {
-				try_files $uri $uri/ /robots.txt =404;
-		}
+    location /sitemap.xml {
+				alias /usr/share/nginx/html/domain_config/sitemap.txt/;
+    }
 
 		location / {
 				proxy_pass http://backend;
