--- a/nginx.conf
+++ b/nginx.conf
@@ -8,11 +8,11 @@ server {
 		add_header Access-Control-Allow-Origin *;
 
 		location /robots.txt {
-				alias /usr/share/nginx/html/domain_config/robots.txt/;
+				alias /usr/share/nginx/html/domain_config/robots.txt;
 		}
 
     location /sitemap.xml {
-				alias /usr/share/nginx/html/domain_config/sitemap.txt/;
+				alias /usr/share/nginx/html/domain_config/sitemap.xml;
     }
 
 		location / {
