--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,8 @@ upstream backend {
 
 server {
 		listen 80;
-		server_name www.outagealert.dev outagealert.dev;
+		server_name outagealert.dev;
 		add_header Access-Control-Allow-Origin *;
-
-		if ($host = www.outagealert.dev) {
-        return 301 $scheme://outagealert.dev$request_uri;
-    }
 
 		location /robots.txt {
 				alias /usr/share/nginx/html/domain_config/robots.txt;
