--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         condition: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./outagealert.dev:/etc/nginx/sites-available/outagealert.dev
       - ./domain_config:/usr/share/nginx/html/domain_config
     depends_on:
       - app
